kube/destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fe
spec:
  host: fe
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: be
spec:
  host: be
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
