kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: IngressClass
metadata:
  name: istio
spec:
  controller: istio.io/ingress-controller
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gateway  
spec:
  ingressClassName: istio
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: fe
          servicePort: 80
      - path: /api/nameday.*
        backend:
          serviceName: be
          servicePort: 80
