kube/virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: be
spec:
  hosts:
    - be
  http:
  - match:
    - headers:
        cookie:
          regex: "^(.*?;)?(canary=true)(;.*)?$"
    route:
    - destination:
        host: be
        subset: v2
  - route:
    - destination:
        host: be
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fe
spec:
  hosts:
    - fe
  http:
  - route:
    - destination:
        host: fe
        subset: v1

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fe
spec:
  host: fe
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: be
spec:
  host: be
  subsets:
  - name: v2
    labels:
      version: v2
  - name: v1
    labels:
      version: v1
